chore(human): add directive to avoid warning messages "A Java agent has been loaded dynamically..." when executing tests